--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,3 +31,21 @@ spring:
   summernote:
     image:
       upload-dir: C:\uploads
+
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: 7d1b8d2a934aea81ad94f34bb0bee10c
+            redirect-uri: "http://localhost:10000/member/login/oauth2/code/kakao/{registrationId}"
+            client-authentication-method: POST
+            authorization-grant-type: authorization_code
+            scope: profile_nickname, account_email #동의 항목
+            client-name: Kakao
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
