--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,7 +30,7 @@ spring:
   #Summernote
   summernote:
     image:
-      upload-dir: C:\uploads
+      upload-dir: /Users/hyun/uploads
 
   security:
     oauth2:
@@ -52,5 +52,5 @@ spring:
 
   app:
     file:
-      upload-dir: C:\uploads
+      upload-dir: /Users/hyun/uploads
 
