--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,13 +32,14 @@ spring:
     image:
       upload-dir: C:\uploads
 
+  #kakao OAuth
   security:
     oauth2:
       client:
         registration:
           kakao:
             client-id: 7d1b8d2a934aea81ad94f34bb0bee10c
-            redirect-uri: "http://localhost:10000/member/login/oauth2/code/kakao/{registrationId}"
+            redirect-uri: "http://localhost:10000/member/kakao-login"
             client-authentication-method: POST
             authorization-grant-type: authorization_code
             scope: profile_nickname, account_email #동의 항목
