--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.1'
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
     implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
+    implementation 'net.coobird:thumbnailator:0.4.8'
     implementation 'org.webjars.npm:summernote:0.8.18'
     implementation 'com.google.code.gson:gson:2.8.2'
     compileOnly 'org.projectlombok:lombok'
