--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -73,8 +73,8 @@ spring:
       mail:
       host: smtp.gmail.com
       port: 587
-      username: 'test.2678ju@gmail.com'
-      password: 'rlawndus1!'
+      username: 'simbongsa300@gmail.com'
+      password: 'xtkwswcvlrrpvien'
       properties:
         mail.smtp.auth: true
         mail.smtp.starttls.enable: true
