--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -70,14 +70,14 @@ spring:
             client-name: Naver
             client-id: CGhZTJz0uzH9cF8sHe71
             client-secret: 4ouXP37HyC
-            redirect-uri: http://localhost:10000/login/oauth2/code/naver
+            redirect-uri: http://www.simbongsa.site/login/oauth2/code/naver
             authorization-grant-type: authorization_code
             scope: email
 
           #kakao
           kakao:
             client-id: 7d1b8d2a934aea81ad94f34bb0bee10c
-            redirect-uri: http://localhost:10000/login/oauth2/code/kakao
+            redirect-uri: http://www.simbongsa.site/login/oauth2/code/kakao
             client-authentication-method: POST
             client-secret: IEMgUxhifcob8cQfModdoRybzbdHD9gj
             authorization-grant-type: authorization_code
